# Satellite

./: CMakeLists.txt  README.md  main.cpp
Proto/: protoc.sh  satellite.grpc.pb.cc  satellite.grpc.pb.h  satellite.pb.cc  satellite.pb.h  satellite.proto
Run/: satellite.conf
Source/: SatelliteImpl.cpp  SatelliteImpl.hpp  TfcConfigCodec.cpp  TfcConfigCodec.hpp
