CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(Satellite)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "-Wall -fPIC")
IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
    SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-DDEBUG")
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)

ADD_SUBDIRECTORY(CoreDeps)
INCLUDE_DIRECTORIES(CoreDeps/include)

LINK_LIBRARIES(dl pthread protobuf gpr grpc++ grpc++_reflection)

SET(APP_SOURCES "./main.cpp")
FILE(GLOB APP_SOURCES ${APP_SOURCES} "./Source/*.cpp")

ADD_EXECUTABLE(satellite ${APP_SOURCES})
TARGET_LINK_LIBRARIES(satellite coredeps)
